# gnb-envswap

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  gnb-envswap.json
.github/workflows/: release.yml
docs/: configuration.md  spec.md
i18n/: messages.json
src/: app.rs  cli.rs  config.rs  i18n.rs  main.rs  output.rs  tui.rs
