[package]
name = "gnb-envswap"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
open = "5.3.2"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sys-locale = "0.3.2"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"

# Optimize for smaller binary size in release builds.
[profile.release]
lto = true
panic = 'abort'
strip = true
